--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "nuxt start",
     "generate": "nuxt generate"
   },
-  "dependencies": {
+  "dependencies":
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
     "vue": "^2.6.14",
