--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "core-js": "^3.19.3",
+    "js-cookie": "^3.0.1",
+    "jwt-decode": "^3.1.2",
     "nuxt": "^2.15.8",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
@@ -19,6 +21,5 @@
     "@nuxtjs/tailwindcss": "^4.2.1",
     "sass": "1.32.5",
     "sass-loader": "10.1.1"
-  
   }
 }
