--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "cookie": "^0.5.0",
     "core-js": "^3.19.3",
+    "google-auth-library": "^8.7.0",
     "js-cookie": "^3.0.1",
     "jwt-decode": "^3.1.2",
     "nuxt": "^2.15.8",
