--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "body-parser": "^1.20.1",
     "cookie": "^0.5.0",
     "core-js": "^3.19.3",
     "google-auth-library": "^8.7.0",
     "js-cookie": "^3.0.1",
     "jwt-decode": "^3.1.2",
     "nuxt": "^2.15.8",
+    "uuid": "^9.0.0",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14"
