--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/cloudinary": "^1.0.3",
     "body-parser": "^1.20.1",
+    "cloudinary-vue": "^1.2.4",
     "cookie": "^0.5.0",
     "core-js": "^3.19.3",
     "google-auth-library": "^8.7.0",
