delete home method

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxt/image": "^0.7.1",
     "@nuxtjs/cloudinary": "^1.0.3",
     "body-parser": "^1.20.1",
     "cloudinary-vue": "^1.2.4",
