--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jwt-decode": "^3.1.2",
     "nuxt": "^2.15.8",
     "uuid": "^9.0.0",
+    "v-calendar": "^2.4.1",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14"
