creating stripe proxy api

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "js-cookie": "^3.0.1",
     "jwt-decode": "^3.1.2",
     "nuxt": "^2.15.8",
+    "stripe": "^11.4.0",
     "uuid": "^9.0.0",
     "v-calendar": "^2.4.1",
     "vue": "^2.6.14",
